@@ -1,3 +1,14 @@
+2019-07-08  Philippe Normand  <pnormand@igalia.com>
+
+        [GStreamer] The CREATE_TRACK macro is messed up
+        https://bugs.webkit.org/show_bug.cgi?id=199356
+
+        Reviewed by Xabier Rodriguez-Calvar.
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
+        (WebCore::MediaPlayerPrivateGStreamer::updateTracks): Fix the
+        CREATE_TRACK macro for !VIDEO_TRACK builds.
+
 2019-07-03  Said Abou-Hallawa  <sabouhallawa@apple.com>
 
         The destructor of CSSAnimationControllerPrivate must explicitly clear the composite animations
